# AI-Robot-Project

./: .gitignore  README.md  package-lock.json
AI Agents/: .env.example  main.py  pyproject.toml  requirements.txt  run.py
AI Agents/automation_agent/: __init__.py  main.py  vicidial_controller.py
AI Agents/brain_agent/: __init__.py  conversation_engine.py  main.py  speech_handler.py  voice_manager.py
AI Agents/common/: config.py  database.py  models.py
AI Agents/logger_agent/: __init__.py  call_logger.py  db_manager.py  main.py
AI Agents/resources/: script.txt
AI Agents/server/: api_server.py  socket_server.py
AI Agents/src/: models.py  seed.py
AI Agents/src/agents/: automation.py  brain.py  conversation.py  logger.py  speech.py  vicidial.py  voice.py
AI Agents/src/api/: auth.py  routes.py  server.py  socketio.py
AI Agents/src/config/: firebase.py  settings.py
AI Agents/src/database/: connection.py  repository.py  schema.py
redstone-crm/: README.md  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
redstone-crm/src/app/: globals.css  layout.tsx  page.tsx
redstone-crm/src/app/dashboard/: page.tsx
redstone-crm/src/app/login/: page.tsx
redstone-crm/src/app/logs/: page.tsx
redstone-crm/src/app/settings/: page.tsx
redstone-crm/src/components/: AudioPlayer.tsx  AuthProvider.tsx  BotCard.tsx  BotControls.tsx  BotFormModal.tsx  LiveLine.tsx  LogTable.tsx  Navbar.tsx  Sidebar.tsx  StatCard.tsx
redstone-crm/src/lib/: api.ts  cn.ts  firebase.ts  seedBots.ts  types.ts  useLocalBots.ts
(+4 files in other folders)
