[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "redstone-ai-agents"
version = "2.0.0"
description = "AI Voice Bot Agent System for Redstone CRM (VICIdial + OpenAI + ElevenLabs)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-socketio>=5.11.0",
    "aiosqlite>=0.20.0",
    "openai>=1.45.0",
    "elevenlabs>=1.10.0",
    "playwright>=1.46.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "loguru>=0.7.2",
    "firebase-admin>=7.0.0",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29.0", "greenlet>=3.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pyrefly]
source_path = ["."]
